fix: Server conf timestamping service url didn't update from global conf when auto-update-timestamp-service-url was set to 'true'